# light-aes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  test_data_gen.c  test_vectors.c
.github/workflows/: c-cpp.yml  cmake_build_and_run.yml
aes/: core.c  core.h  ecb.c  ecb.h  tools.c  tools.h
